Updated HTML, added CSS styling with comments

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,15 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header>
-        <span class="span-decoration title">
+        <span>
             <h1>Angela Donati</h1> <!-- Header title -->
         </span>
         <nav>
-            <ul class="nav-custom"> <!-- Header navigation-->
+            <ul>
+                <!-- Header navigation-->
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contact Me</a></li>
@@ -22,62 +25,87 @@
             </ul>
         </nav>
     </header>
-        <!-- Hero class for centered image-->
-        <figure class="hero">
-           <div class="subtitle">
-               <span class="span-decoration quote">Hello World</span>
-           </div>
-        </figure>
-    
-        <main>
-            <!-- About me section with nested divs to create side by side column effect-->
-            <section id="about-me" class="about-me">
-                <div class="about-container">
-                    <div class="about-section section-title">
-                        <p> About Me </p>
-                    </div>
-                    <div>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At esse deserunt, tenetur nihil fugiat atque ad minus quam, excepturi, vitae quaerat. Doloremque, aperiam perspiciatis eaque accusamus veniam laborum est ipsam.</p>
-                    </div>
-                    <div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, architecto voluptatibus eum, est saepe fugiat tempore fuga dolorum sint dolores ducimus culpa doloribus voluptates pariatur. Temporibus eius molestias officia magnam!</p>
-                    </div>
-                </div>
-            </section>
-            <!-- Work section also with column effect-->
-            <section id="work">
-                <div class="work-container">
-                    <div class="work-section section-title">
-                        <p> About Me </p>
-                    </div>
-                    <div>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At esse deserunt, tenetur nihil fugiat atque ad minus quam, excepturi, vitae quaerat. Doloremque, aperiam perspiciatis eaque accusamus veniam laborum est ipsam.</p>
-                    </div>
-                    <div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, architecto voluptatibus eum, est saepe fugiat tempore fuga dolorum sint dolores ducimus culpa doloribus voluptates pariatur. Temporibus eius molestias officia magnam!</p>
-                    </div>
-                </div>
 
-            </section>
-        </main>
-   <!-- Contact footer-->
-    <footer>
-        <section id="contact">
-            <div class="contact-container">
-                <div>
-            <h3>Contact Me</h3>
+    <!-- Hero class for centered image-->
+    <figure class="hero" alt="Pink clouds">
+        <h2>Hello World.</h2>
+    </figure>
+
+    <main>
+        <!-- About me section with nested div to create side by side column effect-->
+        <section id="about-me" class="container">
+            <h2 class="container-title">
+                About </br> Me
+            </h2>
+            <div class="content">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At esse deserunt, tenetur nihil fugiat
+                    atque ad minus quam, excepturi, vitae quaerat. Doloremque, aperiam perspiciatis eaque accusamus
+                    veniam laborum est ipsam.</p>
             </div>
-            <div>
-            <ul>
-            <li>555555</li>
-            <li><a href="mailto:angeladonati93@gmail.com">angeladonati93@gmail.com
-            </a></li>
-            <li>Github</li>
-        </ul>
-        </div>
-        </div>
+            </div>
+            </div>
+        </section>
+
+        <!-- Work section with grid-->
+
+        <section id="work" class="container">
+            <h2 class="container-title"> Projects</h2>
+            <!-- Project 1 -->
+            <div class="grid-container">
+                <div class="grid-layout">
+                    <a href="" target="_blank" class="project-1 project-image"><img
+                            src="assets/images/horiseon-code-refactor.png" class="screenshot" />
+                        <div class="description">
+                            <h3>Horiseon Code Refactor</h3>
+                            <p>HTML/CSS</p>
+                        </div>
+                        <!-- Project 2 -->
+                        <a href="" class="project-2 project-image">
+                            <img src="" />
+                            <div class="description">
+                                <h3>Project name</h3>
+                            </div>
+                        </a>
+                        <!-- Project 3 -->
+                        <a href="" class="project-2 project-image">
+                            <img src="" />
+                            <div class="description">
+                                <h3>Project name</h3>
+                            </div>
+                        </a>
+                        <!-- Project 4 -->
+                        <a href="" class="project-2 project-image">
+                            <img src="" />
+                            <div class="description">
+                                <h3>Project name</h3>
+                            </div>
+                        </a>
+                        <!-- Project 5 -->
+                        <a href="" class="project-image">
+                            <img src="" />
+                            <div class="description">
+                                <h3> Project name</h3>
+                            </div>
+                        </a>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- Contact footer-->
+    <footer>
+        <section id="contact" class="container">
+            <h2 class="container-title">
+                Contact
+            </h2>
+            <div class="container-content contact">
+                <a href="">0000</a>
+                <a href="">email</a>
+                <a href="">GitHub</a>
+                <a href="https://www.linkedin.com/">LinkdIn</a>
+            </div>
         </section>
     </footer>
-    
+
 </body>
+
 </html>
