Removed unused image files, added resume pdf, and updated readme

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- Hero class for centered image-->
     <figure class="hero" alt="Pink clouds">
-        <h2>Hello World.</h2>
+        <h2>Welcome~</h2>
     </figure>
 
     <main>
@@ -37,10 +37,8 @@
             <h2 class="container-title">
                 About </br> Me
             </h2>
-            <div class="content">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At esse deserunt, tenetur nihil fugiat
-                    atque ad minus quam, excepturi, vitae quaerat. Doloremque, aperiam perspiciatis eaque accusamus
-                    veniam laborum est ipsam.</p>
+            <div class="content container-content">
+                <p>I am an aspiring full stack developer currently enrolled in University of New Hampshire's coding bootcamp. I have always been drawn to technology from a young age and have spent most of my life on the computer. With having my Bachelor's in Environmental Studies, I plan to combine my interest in environmental preservation with my developer skills.</p>
             </div>
             </div>
             </div>
@@ -54,7 +52,7 @@
             <div class="grid-container">
                 <div class="grid-layout">
                     <a href="" target="_blank" class="project-1 project-image"><img
-                            src="assets/images/horiseon-code-refactor.png" class="screenshot" />
+                            src="assets/images/horiseon-code-refactor.png" class="screenshot" alt="Screenshot of Horiseon webpage"/>
                         <div class="description">
                             <h3>Horiseon Code Refactor</h3>
                             <p>HTML/CSS</p>
@@ -98,9 +96,9 @@
                 Contact
             </h2>
             <div class="container-content contact">
-                <a href="">0000</a>
-                <a href="">email</a>
-                <a href="">GitHub</a>
+                <!-- <a href="">Phone Number</a> -->
+                <a href="mailto: angeladonati93@gmail.com">Email</a>
+                <a href="https://github.com/a-donati">GitHub</a>
                 <a href="https://www.linkedin.com/">LinkdIn</a>
             </div>
         </section>
