Added link to resume and link to project page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contact Me</a></li>
-                <li><a href="">Resume</a></li>
+                <li><a target="_blank" href="assets/Angela Donati Resume 2021.docx.pdf">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -51,7 +51,7 @@
             <!-- Project 1 -->
             <div class="grid-container">
                 <div class="grid-layout">
-                    <a href="" target="_blank" class="project-1 project-image"><img
+                    <a href="https://a-donati.github.io/horiseon-code-refactor/" target="_blank" class="project-1 project-image"><img
                             src="assets/images/horiseon-code-refactor.png" class="screenshot" alt="Screenshot of Horiseon webpage"/>
                         <div class="description">
                             <h3>Horiseon Code Refactor</h3>
