Created resume subfolder, updated link path

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contact Me</a></li>
-                <li><a target="_blank" href="assets/Angela Donati Resume 2021.docx.pdf">Resume</a></li>
+                <li><a target="_blank" href="assets/Resume/Angela-Donati-Resume.pdf">Resume</a></li>
             </ul>
         </nav>
     </header>
