--- a/index.html
+++ b/index.html
@@ -51,17 +51,18 @@
             <!-- Project 1 -->
             <div class="grid-container">
                 <div class="grid-layout">
-                    <a href="https://a-donati.github.io/horiseon-code-refactor/" target="_blank" class="project-1 project-image"><img
-                            src="assets/images/horiseon-code-refactor.png" class="screenshot" alt="Screenshot of Horiseon webpage"/>
-                        <div class="description">
-                            <h3>Horiseon Code Refactor</h3>
-                            <p>HTML/CSS</p>
+                    <a href="https://a-donati.github.io/GroupProjectRepo/" target="_blank" class="project-1 project-image"><img
+                        src="/assets/images/Screen Shot 2022-02-12 at 2.46.29 PM.png" class="screenshot" alt="Screenshot of TravelApp webpage"/>
+                    <div class="description">
+                        <h3>TravelApp</h3>
+                        <p>Materalize/JS</p>
                         </div>
                         <!-- Project 2 -->
-                        <a href="" class="project-2 project-image">
-                            <img src="" />
+                        <a href="https://a-donati.github.io/horiseon-code-refactor/" class="project-2 project-image">
+                            <img src="/assets/images/Screen Shot 2022-01-03 at 12.03.51 PM.png" class="screenshot" alt="Screenshot of Horiseon webpage"/>
                             <div class="description">
-                                <h3>Project name</h3>
+                                <h3>Horiseon Refactor</h3>
+                                <p>HTML/CSS</p>
                             </div>
                         </a>
                         <!-- Project 3 -->
