update image filepath

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             <div class="grid-container">
                 <div class="grid-layout">
                     <a href="https://a-donati.github.io/GroupProjectRepo/" target="_blank" class="project-1 project-image"><img
-                        src="/assets/images/Screen Shot 2022-02-12 at 2.46.29 PM.png" class="screenshot" alt="Screenshot of TravelApp webpage"/>
+                        src="./assets/images/Screen Shot 2022-02-12 at 2.46.29 PM.png" class="screenshot" alt="Screenshot of TravelApp webpage"/>
                     <div class="description">
                         <h3>TravelApp</h3>
                         <p>Materalize/JS</p>
                         </div>
                         <!-- Project 2 -->
                         <a href="https://a-donati.github.io/horiseon-code-refactor/" class="project-2 project-image">
-                            <img src="/assets/images/Screen Shot 2022-01-03 at 12.03.51 PM.png" class="screenshot" alt="Screenshot of Horiseon webpage"/>
+                            <img src="./assets/images/Screen Shot 2022-01-03 at 12.03.51 PM.png" class="screenshot" alt="Screenshot of Horiseon webpage"/>
                             <div class="description">
                                 <h3>Horiseon Refactor</h3>
                                 <p>HTML/CSS</p>
