update resume update link paths

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contact Me</a></li>
-                <li><a target="_blank" href="assets/Resume/Angela-Donati-Resume.pdf">Resume</a></li>
+                <li><a target="_blank" href="./assets/Resume/2022resume.docx.pdf">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -100,7 +100,7 @@
                 <!-- <a href="">Phone Number</a> -->
                 <a href="mailto: angeladonati93@gmail.com">Email</a>
                 <a href="https://github.com/a-donati">GitHub</a>
-                <a href="https://www.linkedin.com/">LinkdIn</a>
+                <a href="http://www.linkedin.com/in/angela-d-617575b0">LinkdIn</a>
             </div>
         </section>
     </footer>
